# EDD_Proyecto2

./: CMakeLists.txt  README.md  main.cpp
ArchivosPrueba/: conexiones.csv  productos-1000.csv  productos.csv  sucursales.csv
Documentacion/: Manual de Usuario.docx  TAD's.docx  reporte.docx
src/models/: Connection.h  Product.h  Sucursal.cpp  Sucursal.h
src/structures/: AVLTree.cpp  AVLTree.h  BTree.cpp  BTree.h  BTreePlus.cpp  BTreePlus.h  Graph.cpp  Graph.h  HashTable.cpp  HashTable.h  LinkedList.cpp  LinkedList.h  Queue.cpp  Queue.h  Stack.cpp  Stack.h
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/utils/: CSVReader.cpp  CSVReader.h  DataValidator.cpp  DataValidator.h
